--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -21,7 +21,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/core-kaderisasi
+          images: ghcr.io/${{ github.repository_owner }}/bmka-core-module
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
