--- a/.github/workflows/image_build_test.yml
+++ b/.github/workflows/image_build_test.yml
@@ -22,7 +22,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/core-kaderisasi
+          images: ghcr.io/${{ github.repository_owner }}/bmka-core-module
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -36,5 +36,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/core-kaderisasi-test:latest
+          tags: ghcr.io/${{ github.repository_owner }}/bmka-core-module-test:latest
           labels: ${{ steps.meta.outputs.labels }}
