--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,20 @@
-TZ=UTC
-PORT=3333
-HOST=localhost
-LOG_LEVEL=info
 APP_KEY=y5Fs4gJ4MbkVB7p-Fcz2JD6Pm_Cofr3a
 NODE_ENV=development
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_USER=postgres
+PORT=3334
+HOST=0.0.0.0
+TZ=Asia/Jakarta
+
+LOG_LEVEL=info
+REDIRECT_URL=www.google.com
+SESSION_DRIVER=cookie
+
+DB_USER=
 DB_PASSWORD=
 DB_DATABASE=
-SESSION_DRIVER=cookie
+DB_HOST=
+DB_PORT=
+
+SMTP_USERNAME=
+SMTP_PASSWORD=
 SMTP_HOST=
 SMTP_PORT=
