--- a/package.json
+++ b/package.json
@@ -34,36 +34,36 @@
     "#config/*": "./config/*.js"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^7.7.0",
+    "@adonisjs/assembler": "^7.8.2",
     "@adonisjs/eslint-config": "^1.3.0",
-    "@adonisjs/prettier-config": "^1.3.0",
-    "@adonisjs/tsconfig": "^1.3.0",
+    "@adonisjs/prettier-config": "^1.4.0",
+    "@adonisjs/tsconfig": "^1.4.0",
     "@japa/api-client": "^2.0.3",
     "@japa/assert": "^2.1.0",
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
-    "@swc/core": "^1.5.29",
+    "@swc/core": "^1.7.26",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.14.2",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.16.10",
+    "eslint": "^8.57.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.7",
+    "lint-staged": "^15.2.10",
     "pino-pretty": "^10.3.1",
-    "prettier": "^3.3.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "prettier": "^3.3.3",
+    "ts-node-maintained": "^10.9.4",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@adonisjs/auth": "^9.2.1",
-    "@adonisjs/core": "^6.10.1",
+    "@adonisjs/auth": "^9.2.3",
+    "@adonisjs/core": "^6.14.0",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^20.6.0",
-    "@adonisjs/mail": "^9.2.1",
+    "@adonisjs/mail": "^9.2.2",
     "@adonisjs/static": "^1.1.1",
     "@vinejs/vine": "^2.1.0",
     "exceljs": "^4.4.0",
-    "luxon": "^3.4.4",
-    "pg": "^8.12.0",
+    "luxon": "^3.5.0",
+    "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2"
   },
   "eslintConfig": {
